tests/kyverno-policies/pod-service-account-validation/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-service-account-validation
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-service-account-validation
    rule: webservice-require-service-account
    resources:
      - user-test/test-service-account-skip
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: webservice-require-service-account
    resources:
      - webservice/test-service-account-pass
      - webservice2/test-service-account-namespace
    kind: Pod
    result: pass
  - policy: pod-service-account-validation
    rule: webservice-require-service-account
    resources:
      - webservice/test-service-account-fail
    kind: Pod
    result: fail
  - policy: pod-service-account-validation
    rule: webservice-require-valid-service-account
    resources:
      - webservice/pods-require-valid-service-account-pass
      - webservice/pods-require-valid-service-account-container-pass
      - webservice/pods-require-valid-service-account-init-pass
      - webservice2/pods-require-valid-service-account-namespace-pass
    kind: Pod
    result: pass
  - policy: pod-service-account-validation
    rule: webservice-require-valid-service-account
    resources:
      - user-test/pods-require-valid-service-account-skip
      - webservice/pods-require-valid-service-account-skip-op
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: webservice-require-valid-service-account
    resources:
      - webservice/pods-require-valid-service-account-runasnonroot-fail
      - webservice/pods-require-valid-service-account-uid-fail
      - webservice/pods-require-valid-service-account-uid-container-fail
      - webservice/pods-require-valid-service-account-uid-init-fail
      - webservice/pods-require-valid-service-account-gid-fail
      - webservice/pods-require-valid-service-account-gid-container-fail
      - webservice/pods-require-valid-service-account-gid-init-fail
      - webservice/fsgroup-require-valid-service-account-gid-fail
      - webservice2/pods-require-valid-service-account-namespace-fail
    kind: Pod
    result: fail
  - policy: pod-service-account-validation
    rule: webservice-require-valid-service-account
    resources:
      - user-test/test-groups-skip
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: webservice-service-account-authorized-for-groups
    resources:
      - webservice/test-groups-skip-op
      - webservice/test-groups-skip-len
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: webservice-service-account-authorized-for-groups
    resources:
      - webservice/test-groups-pass
      - webservice2/test-groups-namespace-pass
    kind: Pod
    result: pass
  - policy: pod-service-account-validation
    rule: webservice-service-account-authorized-for-groups
    resources:
      - webservice/test-groups-fail
      - webservice2/test-groups-namespace-fail
    kind: Pod
    result: fail

  - policy: pod-service-account-validation
    rule: paas-require-valid-service-account
    resources:
      - paas/paas-pods-require-valid-service-account-pass
      - paas/paas-pods-require-valid-service-account-container-pass
      - paas/paas-pods-require-valid-service-account-init-pass
    kind: Pod
    result: pass
  - policy: pod-service-account-validation
    rule: paas-require-valid-service-account
    resources:
      - user-test/pods-require-valid-service-account-skip
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: paas-require-valid-service-account
    resources:
      - paas/paas-pods-require-valid-service-account-skip-op
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: paas-require-valid-service-account
    resources:
      - paas/paas-pods-require-valid-service-account-runasnonroot-fail
      - paas/paas-pods-require-valid-service-account-uid-fail
      - paas/paas-pods-require-valid-service-account-uid-container-fail
      - paas/paas-pods-require-valid-service-account-uid-init-fail
      - paas/paas-pods-require-valid-service-account-gid-fail
      - paas/paas-pods-require-valid-service-account-gid-container-fail
      - paas/paas-pods-require-valid-service-account-gid-init-fail
      - paas/paas-fsgroup-require-valid-service-account-gid-fail
    kind: Pod
    result: fail
  - policy: pod-service-account-validation
    rule: paas-require-valid-service-account
    resources:
      - user-test/test-groups-skip
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: paas-service-account-authorized-for-groups
    resources:
      - paas/paas-test-groups-skip-op
      - paas/paas-test-groups-skip-len
    kind: Pod
    result: skip
  - policy: pod-service-account-validation
    rule: paas-service-account-authorized-for-groups
    resources:
      - paas/paas-test-groups-pass
    kind: Pod
    result: pass
  - policy: pod-service-account-validation
    rule: paas-service-account-authorized-for-groups
    resources:
      - paas/paas-test-groups-fail
    kind: Pod
    result: fail
