tests/kyverno-policies/pod-service-account-validation/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: pod-service-account-validation
    rules:
      - name: webservice-require-valid-service-account
        values:
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
      - name: webservice-service-account-authorized-for-groups
        values:
          userGIDMap.data.user-test: '["1000", "1001"]'
      - name: paas-require-valid-service-account
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
      - name: paas-service-account-authorized-for-groups
        values:
          serviceAccount: test
          userGIDMap.data.user-test: '["1000", "1001"]'
    resources:
      - name: test-service-account-pass
        values:
          serviceAccount: test
          namespaceServiceAccount: ''
      - name: test-service-account-namespace
        values:
          serviceAccount: ''
          namespaceServiceAccount: test
      - name: test-service-account-fail
        values:
          serviceAccount: ''
          namespaceServiceAccount: ''
      - name: pods-require-valid-service-account-skip
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-skip-op
        values:
          request.operation: DELETE
      - name: pods-require-valid-service-account-pass
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-container-pass
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-init-pass
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-uid-fail
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-uid-container-fail
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-uid-init-fail
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-gid-fail
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-gid-container-fail
        values:
          request.operation: CREATE
      - name: pods-require-valid-service-account-gid-init-fail
        values:
          request.operation: CREATE
      - name: fsgroup-require-valid-service-account-gid-skip
        values:
          request.operation: CREATE
      - name: fsgroup-require-valid-service-account-gid-skip-op
        values:
          request.operation: DELETE
      - name: fsgroup-require-valid-service-account-gid-fail
        values:
          request.operation: CREATE
      - name: test-groups-skip
        values:
          request.operation: CREATE
      - name: test-groups-skip-op
        values:
          request.operation: DELETE
      - name: test-groups-skip-len
        values:
          request.operation: CREATE
      - name: test-groups-pass
        values:
          request.operation: CREATE
      - name: test-groups-fail
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-skip-op
        values:
          request.operation: DELETE
      - name: paas-pods-require-valid-service-account-pass
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-container-pass
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-init-pass
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-uid-fail
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-uid-container-fail
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-uid-init-fail
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-gid-fail
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-gid-container-fail
        values:
          request.operation: CREATE
      - name: paas-pods-require-valid-service-account-gid-init-fail
        values:
          request.operation: CREATE
      - name: paas-fsgroup-require-valid-service-account-gid-skip
        values:
          request.operation: CREATE
      - name: paas-fsgroup-require-valid-service-account-gid-skip-op
        values:
          request.operation: DELETE
      - name: paas-fsgroup-require-valid-service-account-gid-fail
        values:
          request.operation: CREATE
      - name: paas-test-groups-skip-op
        values:
          request.operation: DELETE
      - name: paas-test-groups-skip-len
        values:
          request.operation: CREATE
      - name: paas-test-groups-pass
        values:
          request.operation: CREATE
      - name: paas-test-groups-fail
        values:
          request.operation: CREATE
namespaceSelector:
  - name: user-test
    labels:
      foo: bar
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: webservice2
    labels:
      osc.edu/role: webservice
      osc.edu/service-account: test
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test
